--- a/client/.prettierrc.json
+++ b/client/.prettierrc.json
@@ -5,5 +5,7 @@
   "singleQuote": true,
   "printWidth": 100,
   "trailingComma": "es5",
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "plugins": [
+    "prettier-plugin-tailwindcss"
+  ]
 }
