--- a/client/package.json
+++ b/client/package.json
@@ -17,45 +17,48 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@headlessui/vue": "^1.7.23",
-    "@heroicons/vue": "^2.2.0",
-    "@trpc/client": "^11.4.4",
+    "@headlessui/vue": "^1.7.19",
+    "@heroicons/vue": "^2.1.3",
+    "@popperjs/core": "^2.11.8",
+    "@trpc/client": "^10.45.2",
     "@vuepic/vue-datepicker": "^11.0.2",
     "flowbite": "^2.3.0",
     "flowbite-vue": "^0.1.3",
     "jwt-decode": "^4.0.0",
-    "pinia": "^3.0.3",
-    "superjson": "^2.2.2",
+    "pinia": "^2.1.7",
+    "superjson": "^2.2.1",
     "v-calendar": "^3.1.2",
-    "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@mono/server": "^1.0.0",
-    "@playwright/test": "^1.54.2",
-    "@rushstack/eslint-patch": "^1.12.0",
-    "@tsconfig/node22": "^22.0.2",
-    "@types/chance": "^1.1.7",
-    "@types/node": "^24.2.1",
-    "@vitejs/plugin-vue": "^6.0.1",
-    "@vue/eslint-config-prettier": "^10.2.0",
-    "@vue/eslint-config-typescript": "^14.6.0",
-    "@vue/test-utils": "^2.4.6",
-    "@vue/tsconfig": "^0.7.0",
-    "autoprefixer": "^10.4.21",
-    "chance": "^1.1.13",
-    "dotenv": "^17.2.1",
-    "eslint": "^9.33.0",
-    "eslint-plugin-vue": "^10.4.0",
-    "kysely": "^0.28.5",
+    "@playwright/test": "^1.42.1",
+    "@rushstack/eslint-patch": "^1.10.1",
+    "@tsconfig/node20": "^20.1.6",
+    "@types/chance": "^1.1.6",
+    "@types/jsdom": "^21.1.6",
+    "@types/node": "^20.12.3",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "@vue/eslint-config-typescript": "^13.0.0",
+    "@vue/test-utils": "^2.4.5",
+    "@vue/tsconfig": "^0.5.1",
+    "autoprefixer": "^10.4.19",
+    "chance": "^1.1.11",
+    "dotenv": "^16.4.5",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.24.0",
+    "jsdom": "^24.0.0",
+    "kysely": "^0.27.3",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.5.6",
-    "prettier": "^3.6.2",
+    "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.13",
     "tailwindcss": "^3.4.3",
-    "typescript": "~5.9.2",
-    "vite": "^7.1.2",
-    "vitest": "^3.2.4",
-    "vue-tsc": "^3.0.5"
+    "typescript": "~5.4.3",
+    "vite": "^5.2.7",
+    "vitest": "^1.4.0",
+    "vue-tsc": "^2.0.7"
   }
 }
