--- a/client/tsconfig.node.json
+++ b/client/tsconfig.node.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@tsconfig/node22/tsconfig.json",
+  "extends": "@tsconfig/node20/tsconfig.json",
   "include": [
     "vite.config.*",
     "vitest.config.*",
@@ -12,8 +12,13 @@
   "compilerOptions": {
     "composite": true,
     "strict": true,
+
     "module": "ESNext",
     "moduleResolution": "Bundler",
+
+    "target": "es2022",
+    "lib": ["es2022", "es2023.array", "es2023.collection", "dom"],
+
     "types": ["node"]
   }
 }
