--- a/server/package.json
+++ b/server/package.json
@@ -26,45 +26,50 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@tsconfig/node22": "^22.0.2",
-    "@types/bcrypt": "^6.0.0",
-    "@types/chance": "^1.1.7",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^24.2.1",
-    "@types/pg": "^8.15.5",
-    "@types/supertest": "^6.0.3",
+    "@tsconfig/node20": "^20.1.6",
+    "@types/bcrypt": "^5.0.2",
+    "@types/chance": "^1.1.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "^20.12.3",
+    "@types/pg": "^8.11.6",
+    "@types/supertest": "^6.0.2",
     "@types/ws": "^8.18.1",
-    "@typescript-eslint/eslint-plugin": "^8.44.0",
-    "@typescript-eslint/parser": "^8.44.0",
-    "@vitest/coverage-v8": "^3.2.4",
-    "chance": "^1.1.13",
-    "eslint": "^9.33.0",
-    "eslint-config-prettier": "^10.1.8",
-    "kysely-codegen": "^0.18.5",
-    "prettier": "^3.6.2",
-    "supertest": "^7.1.4",
-    "tsc-alias": "^1.8.16",
-    "tsx": "^4.20.4",
-    "typescript": "^5.9.2",
-    "vitest": "^3.2.4"
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
+    "@typescript-eslint/parser": "^7.5.0",
+    "@vitest/coverage-v8": "^1.4.0",
+    "chance": "^1.1.11",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "kysely-codegen": "^0.15.0",
+    "prettier": "^3.2.5",
+    "supertest": "^6.3.4",
+    "tsc-alias": "^1.8.8",
+    "tsx": "^4.7.1",
+    "typescript": "^5.4.3",
+    "vitest": "^1.4.0"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.1.11",
-    "@trpc/server": "^11.4.4",
-    "bcrypt": "^6.0.0",
+    "@trpc/server": "^10.45.2",
+    "@types/lodash-es": "^4.17.12",
+    "bcrypt": "^5.1.1",
     "cohere-ai": "^7.18.1",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
+    "date-fns": "^4.1.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "kysely": "^0.28.5",
-    "pg": "^8.16.3",
+    "kysely": "^0.27.3",
+    "lodash-es": "^4.17.21",
+    "pg": "^8.11.5",
     "pgvector": "^0.2.0",
-    "superjson": "^2.2.2",
-    "zod": "^4.0.17",
-    "zod-validation-error": "^4.0.1",
-    "ws": "^8.18.1"
+    "superjson": "^2.2.1",
+    "trpc-panel": "^1.3.4",
+    "zod": "^3.22.4",
+    "zod-validation-error": "^3.0.3",
+    "ws": "^8.18.3"
   }
 }
