--- a/server/.env.example
+++ b/server/.env.example
@@ -1,7 +1,9 @@
 # data used for development and testing
-DATABASE_URL=postgres://username:password@localhost:5432/database_name
+DATABASE_URL=postgres://username:password@localhost:5435/database_name
+BOT_API_KEY=cohere_api_key
 TOKEN_KEY=supersecretkey
-# optional default values in config admin@email.com admin12345
-ADMIN_EMAIL=admin@email.com
-INITIAL_ADMIN_PASSWORD=passwordMin8
-# production data are set up in github action secrets & variable
+// optional value, changing hardcoded default values
+TOKEN_EXPIRES_IN=1h
+REFRESH_TOKEN_EXPIRES_IN=1d
+PASSWORD_COST=
+PASSWORD_PEPPER=newPepper
