--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -6,15 +6,14 @@ services:
     # ankane is the maintainer of pgvector, but For pgvector 0.6.0+, use pgvector/pgvector instead
     image: pgvector/pgvector:0.8.1-pg17-trixie
     volumes:
-      - bot-pg-vector-data:/var/lib/postgresql/data
-      - ./init-scripts:/docker-entrypoint-initdb.d
+      - note_app_db_data:/var/lib/postgresql/data
     environment:
       POSTGRES_USER: turing_user
       POSTGRES_PASSWORD: turing_pass
-      POSTGRES_DB: vector_db
+      POSTGRES_DB: note_app_vector_db
     ports:
       # using port 5435 to avoid conflicts with a local Postgres instance
       - '5435:5432'
 
 volumes:
-  bot-pg-vector-data:
+  note_app_db_data:
