--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "@tsconfig/node20": "^20.1.6",
     "@types/bcrypt": "^5.0.2",
     "@types/chance": "^1.1.6",
+    "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
@@ -57,6 +58,7 @@
     "@types/lodash-es": "^4.17.12",
     "bcrypt": "^5.1.1",
     "cohere-ai": "^7.18.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -66,8 +68,8 @@
     "pg": "^8.11.5",
     "pgvector": "^0.2.0",
     "superjson": "^2.2.1",
+    "ws": "^8.18.3",
     "zod": "^3.22.4",
-    "zod-validation-error": "^3.0.3",
-    "ws": "^8.18.3"
+    "zod-validation-error": "^3.0.3"
   }
 }
