--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     "source.fixAll": "explicit",
     "source.fixAll.eslint": "explicit"
   },
-  "eslint.validate": ["typescript", "typescriptreact", "vue"]
+  "eslint.validate": ["typescript", "typescriptreact", "vue"],
+  "cSpell.words": ["flowbite"]
 }
