changet authService context type

--- a/server/.env.example
+++ b/server/.env.example
@@ -2,8 +2,8 @@
 DATABASE_URL=postgres://username:password@localhost:5435/database_name
 BOT_API_KEY=cohere_api_key
 TOKEN_KEY=supersecretkey
-// optional value, changing hardcoded default values
+# optional value, changing hardcoded default values
 TOKEN_EXPIRES_IN=1h
 REFRESH_TOKEN_EXPIRES_IN=1d
-PASSWORD_COST=
+PASSWORD_COST=12
 PASSWORD_PEPPER=newPepper
